8342575: [lworld] Compiler should reject volatile fields in value classes